// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DashboardMenu> renders DashboardMenu 1`] = `
<nav
  className="Van-DashboardMenu"
>
  <ul
    className="Van-DashboardMenu-nav"
  >
    <li
      className="Van-DashboardMenu-item"
      onClick={undefined}
      role="presentation"
    >
      Overzicht
    </li>
    <li
      className="Van-DashboardMenu-item"
      onClick={undefined}
      role="presentation"
    >
      Laadpassen
    </li>
  </ul>
</nav>
`;

exports[`<DashboardMenu> renders active item 1`] = `
<nav
  className="Van-DashboardMenu"
>
  <ul
    className="Van-DashboardMenu-nav"
  >
    <li
      className="Van-DashboardMenu-item Van-DashboardMenu-item--active"
      onClick={undefined}
      role="presentation"
    >
      Overzicht
    </li>
    <li
      className="Van-DashboardMenu-item"
      onClick={undefined}
      role="presentation"
    >
      Laadpassen
    </li>
  </ul>
</nav>
`;

exports[`<DashboardMenu> renders menu with a link element 1`] = `
<nav
  className="Van-DashboardMenu"
>
  <ul
    className="Van-DashboardMenu-nav"
  >
    <li
      className="Van-DashboardMenu-item"
      onClick={undefined}
      role="presentation"
    >
      <a
        href="#"
      >
        Overzicht
      </a>
    </li>
    <li
      className="Van-DashboardMenu-item"
      onClick={undefined}
      role="presentation"
    >
      <a
        href="#"
      >
        Laadpassen
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<DashboardMenu> renders with specific attributes 1`] = `
<nav
  className="Van-DashboardMenu"
  data-id="0"
>
  <ul
    className="Van-DashboardMenu-nav"
  >
    <li
      className="Van-DashboardMenu-item"
      data-id="0"
      onClick={undefined}
      role="presentation"
    >
      Overzicht
    </li>
    <li
      className="Van-DashboardMenu-item"
      onClick={undefined}
      role="presentation"
    >
      Laadpassen
    </li>
  </ul>
</nav>
`;

exports[`<DashboardMenu> renders with specific className 1`] = `
<nav
  className="Van-DashboardMenu my-class"
>
  <ul
    className="Van-DashboardMenu-nav"
  >
    <li
      className="Van-DashboardMenu-item my-class"
      onClick={undefined}
      role="presentation"
    >
      Overzicht
    </li>
    <li
      className="Van-DashboardMenu-item"
      onClick={undefined}
      role="presentation"
    >
      Laadpassen
    </li>
  </ul>
</nav>
`;
